--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://112.124.48.103:3306/uaa-db?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://112.124.48.103:3306/uaa-db2?useUnicode=true&characterEncoding=utf8
 jdbc.username=test
 jdbc.password=1q2w3e4r
