--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://112.124.48.103:3306/uaa-db2?useUnicode=true&characterEncoding=utf8
-jdbc.username=test
-jdbc.password=1q2w3e4r
+#jdbc.url=jdbc:mysql://112.124.48.103:3306/uaa-db2?useUnicode=true&characterEncoding=utf8
+#jdbc.username=test
+#jdbc.password=1q2w3e4r
 
 
-#jdbc.url=jdbc:mysql://10.4.3.92:3306/d8796df7898394f378e132ecfc638a378?useUnicode=true&characterEncoding=utf8
-#jdbc.username=uZYIrnXgW2kYY
-#jdbc.password=pXUeiZLZ2t2Ct
+jdbc.url=jdbc:mysql://10.4.3.92:3306/d8796df7898394f378e132ecfc638a378?useUnicode=true&characterEncoding=utf8
+jdbc.username=uZYIrnXgW2kYY
+jdbc.password=pXUeiZLZ2t2Ct
